--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -52,8 +52,9 @@ ipykernel==6.6.0
     #   jupyter-console
     #   notebook
     #   qtconsole
-ipython==7.30.1
+ipython==7.31.1
     # via
+    #   -r requirements-dev.in
     #   ipykernel
     #   ipywidgets
     #   jupyter-console
