--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ oauthlib==3.1.1
 opt-einsum==3.3.0
     # via tensorflow
 pandas==1.3.5
-    # via dense-feature-mixer (setup.py)
+    # via embedding-encoder (setup.py)
 protobuf==3.19.1
     # via
     #   tensorboard
@@ -89,7 +89,7 @@ requests-oauthlib==1.3.0
 rsa==4.8
     # via google-auth
 scikit-learn==1.0.2
-    # via dense-feature-mixer (setup.py)
+    # via embedding-encoder (setup.py)
 scipy==1.7.3
     # via scikit-learn
 six==1.16.0
@@ -109,7 +109,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
     # via tensorboard
 tensorflow==2.7.0
-    # via dense-feature-mixer (setup.py)
+    # via embedding-encoder (setup.py)
 tensorflow-estimator==2.7.0
     # via tensorflow
 tensorflow-io-gcs-filesystem==0.23.1
