--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,38 +10,24 @@ apeye==1.1.0
     # via sphinx-toolbox
 appdirs==1.4.4
     # via apeye
-argcomplete==1.12.3
-    # via ipykernel
-argon2-cffi==21.3.0
-    # via notebook
-argon2-cffi-bindings==21.2.0
-    # via argon2-cffi
 atomicwrites==1.4.0
     # via pytest
 attrs==21.4.0
-    # via
-    #   jsonschema
-    #   pytest
+    # via pytest
 autodocsumm==0.2.7
     # via sphinx-toolbox
 babel==2.9.1
     # via sphinx
-backcall==0.2.0
-    # via ipython
 beautifulsoup4==4.10.0
     # via sphinx-toolbox
 black==21.12b0
     # via -r requirements-dev.in
-bleach==4.1.0
-    # via nbconvert
 cachecontrol[filecache]==0.12.10
     # via sphinx-toolbox
 certifi==2021.10.8
     # via
     #   -c requirements.txt
     #   requests
-cffi==1.15.0
-    # via argon2-cffi-bindings
 charset-normalizer==2.0.10
     # via
     #   -c requirements.txt
@@ -54,7 +40,6 @@ colorama==0.4.4
     # via
     #   click
     #   consolekit
-    #   ipython
     #   pytest
     #   sphinx
     #   sphinx-autobuild
@@ -64,12 +49,6 @@ consolekit==1.3.1
     # via sphinx-toolbox
 css-parser==1.0.6
     # via dict2css
-debugpy==1.5.1
-    # via ipykernel
-decorator==5.1.0
-    # via ipython
-defusedxml==0.7.1
-    # via nbconvert
 deprecation==2.1.0
     # via deprecation-alias
 deprecation-alias==0.3.0
@@ -90,10 +69,6 @@ domdf-python-tools==3.2.1
     #   consolekit
     #   dict2css
     #   sphinx-toolbox
-entrypoints==0.3
-    # via
-    #   jupyter-client
-    #   nbconvert
 html5lib==1.1
     # via sphinx-toolbox
 idna==3.3
@@ -106,70 +81,15 @@ imagesize==1.3.0
 importlib-metadata==4.10.0
     # via
     #   -c requirements.txt
-    #   argcomplete
     #   click
     #   domdf-python-tools
-    #   ipykernel
-    #   jsonschema
     #   pluggy
     #   pytest
     #   sphinx
-importlib-resources==5.4.0
-    # via jsonschema
 iniconfig==1.1.1
     # via pytest
-ipykernel==6.6.0
-    # via
-    #   ipywidgets
-    #   jupyter
-    #   jupyter-console
-    #   notebook
-    #   qtconsole
-ipython==7.31.1
-    # via
-    #   -r requirements-dev.in
-    #   ipykernel
-    #   ipywidgets
-    #   jupyter-console
-ipython-genutils==0.2.0
-    # via
-    #   ipywidgets
-    #   nbformat
-    #   notebook
-    #   qtconsole
-ipywidgets==7.6.5
-    # via jupyter
-jedi==0.18.1
-    # via ipython
 jinja2==3.0.3
-    # via
-    #   nbconvert
-    #   notebook
-    #   sphinx
-jsonschema==4.3.2
-    # via nbformat
-jupyter==1.0.0
-    # via -r requirements-dev.in
-jupyter-client==7.1.0
-    # via
-    #   ipykernel
-    #   jupyter-console
-    #   nbclient
-    #   notebook
-    #   qtconsole
-jupyter-console==6.4.0
-    # via jupyter
-jupyter-core==4.9.1
-    # via
-    #   jupyter-client
-    #   nbconvert
-    #   nbformat
-    #   notebook
-    #   qtconsole
-jupyterlab-pygments==0.1.2
-    # via nbconvert
-jupyterlab-widgets==1.0.2
-    # via ipywidgets
+    # via sphinx
 livereload==2.6.3
     # via sphinx-autobuild
 lockfile==0.12.2
@@ -178,14 +98,8 @@ lockfile==0.12.2
     #   sphinx-toolbox
 markupsafe==2.0.1
     # via jinja2
-matplotlib-inline==0.1.3
-    # via
-    #   ipykernel
-    #   ipython
 mistletoe==0.8.1
     # via consolekit
-mistune==0.8.4
-    # via nbconvert
 msgpack==1.0.3
     # via cachecontrol
 mypy-extensions==0.4.3
@@ -194,94 +108,32 @@ mypy-extensions==0.4.3
     #   typing-inspect
 natsort==8.0.2
     # via domdf-python-tools
-nbclient==0.5.9
-    # via nbconvert
-nbconvert==6.3.0
-    # via
-    #   jupyter
-    #   notebook
-nbformat==5.1.3
-    # via
-    #   ipywidgets
-    #   nbclient
-    #   nbconvert
-    #   notebook
-nest-asyncio==1.5.4
-    # via
-    #   jupyter-client
-    #   nbclient
-    #   notebook
-notebook==6.4.6
-    # via
-    #   jupyter
-    #   widgetsnbextension
 packaging==21.3
     # via
-    #   bleach
-    #   deprecation
     #   deprecation-alias
     #   pytest
-    #   qtpy
     #   sphinx
-pandocfilters==1.5.0
-    # via nbconvert
-parso==0.8.3
-    # via jedi
 pathspec==0.9.0
     # via black
-pickleshare==0.7.5
-    # via ipython
 platformdirs==2.4.0
     # via black
 pluggy==1.0.0
     # via pytest
-prometheus-client==0.12.0
-    # via notebook
-prompt-toolkit==3.0.24
-    # via
-    #   ipython
-    #   jupyter-console
 py==1.11.0
     # via pytest
-pycparser==2.21
-    # via cffi
 pygments==2.10.0
     # via
-    #   ipython
-    #   jupyter-console
-    #   jupyterlab-pygments
-    #   nbconvert
-    #   qtconsole
     #   sphinx
     #   sphinx-prompt
     #   sphinx-tabs
 pyparsing==3.0.6
     # via packaging
-pyrsistent==0.18.0
-    # via jsonschema
 pytest==6.2.5
     # via -r requirements-dev.in
-python-dateutil==2.8.2
-    # via
-    #   -c requirements.txt
-    #   jupyter-client
 pytz==2021.3
     # via
     #   -c requirements.txt
     #   babel
-pywin32==303
-    # via jupyter-core
-pywinpty==1.1.6
-    # via terminado
-pyzmq==22.3.0
-    # via
-    #   jupyter-client
-    #   notebook
-    #   qtconsole
-qtconsole==5.2.2
-    # via jupyter
-qtpy==2.0.0
-    # via qtconsole
 recommonmark==0.7.1
     # via -r requirements-dev.in
 requests==2.27.1
@@ -294,15 +146,11 @@ ruamel.yaml==0.17.20
     # via sphinx-toolbox
 ruamel.yaml.clib==0.2.6
     # via ruamel.yaml
-send2trash==1.8.0
-    # via notebook
 six==1.16.0
     # via
     #   -c requirements.txt
-    #   bleach
     #   html5lib
     #   livereload
-    #   python-dateutil
 snowballstemmer==2.2.0
     # via sphinx
 soupsieve==2.3.1
@@ -345,45 +193,21 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 tabulate==0.8.9
     # via sphinx-toolbox
-terminado==0.12.1
-    # via notebook
-testpath==0.5.0
-    # via nbconvert
 toml==0.10.2
     # via pytest
 tomli==1.2.3
     # via black
 tornado==6.1
-    # via
-    #   ipykernel
-    #   jupyter-client
-    #   livereload
-    #   notebook
-    #   terminado
-traitlets==5.1.1
-    # via
-    #   ipykernel
-    #   ipython
-    #   ipywidgets
-    #   jupyter-client
-    #   jupyter-core
-    #   matplotlib-inline
-    #   nbclient
-    #   nbconvert
-    #   nbformat
-    #   notebook
-    #   qtconsole
+    # via livereload
 typed-ast==1.5.1
     # via black
 typing-extensions==4.0.1
     # via
     #   -c requirements.txt
-    #   argon2-cffi
     #   black
     #   consolekit
     #   domdf-python-tools
     #   importlib-metadata
-    #   jsonschema
     #   sphinx-toolbox
     #   typing-inspect
 typing-inspect==0.7.1
@@ -392,19 +216,9 @@ urllib3==1.26.8
     # via
     #   -c requirements.txt
     #   requests
-wcwidth==0.2.5
-    # via prompt-toolkit
 webencodings==0.5.1
-    # via
-    #   bleach
-    #   html5lib
-widgetsnbextension==3.5.2
-    # via ipywidgets
+    # via html5lib
 zipp==3.7.0
     # via
     #   -c requirements.txt
     #   importlib-metadata
-    #   importlib-resources
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
