--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,7 +28,7 @@ certifi==2021.10.8
     # via
     #   -c requirements.txt
     #   requests
-charset-normalizer==2.0.10
+charset-normalizer==2.0.11
     # via
     #   -c requirements.txt
     #   requests
@@ -110,6 +110,7 @@ natsort==8.0.2
     # via domdf-python-tools
 packaging==21.3
     # via
+    #   -c requirements.txt
     #   deprecation-alias
     #   pytest
     #   sphinx
@@ -126,8 +127,10 @@ pygments==2.10.0
     #   sphinx
     #   sphinx-prompt
     #   sphinx-tabs
-pyparsing==3.0.6
-    # via packaging
+pyparsing==3.0.7
+    # via
+    #   -c requirements.txt
+    #   packaging
 pytest==6.2.5
     # via -r requirements-dev.in
 pytz==2021.3
