--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -28,7 +28,7 @@ certifi==2021.10.8
     # via
     #   -c requirements.txt
     #   requests
-charset-normalizer==2.0.11
+charset-normalizer==2.0.12
     # via
     #   -c requirements.txt
     #   requests
@@ -78,7 +78,7 @@ idna==3.3
     #   requests
 imagesize==1.3.0
     # via sphinx
-importlib-metadata==4.10.1
+importlib-metadata==4.11.1
     # via
     #   -c requirements.txt
     #   click
@@ -145,9 +145,9 @@ requests==2.27.1
     #   apeye
     #   cachecontrol
     #   sphinx
-ruamel.yaml==0.17.20
+ruamel-yaml==0.17.21
     # via sphinx-toolbox
-ruamel.yaml.clib==0.2.6
+ruamel-yaml-clib==0.2.6
     # via ruamel.yaml
 six==1.16.0
     # via
@@ -204,7 +204,7 @@ tornado==6.1
     # via livereload
 typed-ast==1.5.1
     # via black
-typing-extensions==4.0.1
+typing-extensions==4.1.1
     # via
     #   -c requirements.txt
     #   black
